[package]
name = "mqd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
clap = { version = "4.3.23", features = ["derive"] }
env_logger = "0.10"
gamedig = { version = "0.3", default-features = false, features = ["games"] }
log = "0.4"
ron = "0.8.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
